src/objects/ServiceContract.object
<CustomObject>
    <fields>
        <fullName>POL_LKP_Compania__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Compañía asociada a la póliza</description>
        <label>Compañía</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contratos de servicio</relationshipLabel>
        <relationshipName>POL_REL_Compania</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POL_LKP_Poliza_Complementaria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Póliza complementaria</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Contratos de servicio</relationshipLabel>
        <relationshipName>POL_REL_Poliza_Complementaria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POL_LKP_Producto_Cia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Producto asociado a la póliza</description>
        <label>Producto</label>
        <referenceTo>Producto_CIA__c</referenceTo>
        <relationshipLabel>Contratos de servicio</relationshipLabel>
        <relationshipName>POL_REL_Producto</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POL_LKP_Version_Actual__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Versión Actual</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Version_ContratoServicio__c.POLV_LKP_PolizaContrato__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Version_ContratoServicio__c</referenceTo>
        <relationshipLabel>Contratos de servicio</relationshipLabel>
        <relationshipName>Contratos_de_servicio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POL_TXT_Cliente_Ensura__c</fullName>
        <description>Código del cliente en Ensura. Es necesario almacenarlo a nivel de póliza pues el valor nos llega a CRM desde la integración con VESTA de Consulta de Pólizas. Se utiliza para una integración de información posterior con Ensura para informarle de los clientes no Robinson.</description>
        <label>Cliente Ensura</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>P_lizas_Demo</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>POL_LKP_Compania__c</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.APPROVALSTATUS</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.STATUSINDICATOR</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STARTDATE</field>
            <operation>equals</operation>
        </filters>
        <label>Pólizas Demo</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Polizas_Patria_Hispana</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>POL_LKP_Compania__c</columns>
        <columns>POL_LKP_Producto_Cia__c</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.APPROVALSTATUS</columns>
        <columns>CONTRACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>POL_LKP_Compania__c</field>
            <operation>equals</operation>
            <value>Patria Hispana</value>
        </filters>
        <label>Pólizas Patria Hispana</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Polizas_transferidas</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>POL_LKP_Compania__c</columns>
        <columns>CONTRACT.APPROVALSTATUS</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.STATUSINDICATOR</columns>
        <filterScope>Everything</filterScope>
        <label>Pólizas transferidas</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Todos_los_Contratos</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>POL_LKP_Compania__c</columns>
        <columns>CONTRACT.APPROVALSTATUS</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>ServiceContract.POL_Poliza</value>
        </filters>
        <label>Todos los Contratos</label>
        <language>es</language>
    </listViews>
    <recordTypes>
        <fullName>POL_Poliza</fullName>
        <active>true</active>
        <description>Las pólizas que son susceptibles de ser atendidas por HomeServe</description>
        <label>Póliza</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Control_SegurCaixa</fullName>
        <active>false</active>
        <description>Si la cía no es SegurCaixa no se rellena el campo &quot;Control SegurCaixa&quot;.</description>
        <errorConditionFormula>AND(POL_LKP_Compania__r.CUE_TXT_Identificador__c   &lt;&gt;  &quot;1018&quot;,  NOT(ISBLANK( POL_NUM_Control_SegurCaixa__c )))</errorConditionFormula>
        <errorMessage>Si la Compañía Aseguradora no es SegurCaixa, el campo &quot;Control SegurCaixa&quot; no debe estar informado.</errorMessage>
    </validationRules>
</CustomObject>